--- a/Views/Admin/Urgencias.cshtml
+++ b/Views/Admin/Urgencias.cshtml
@@ -25,15 +25,15 @@
             {
                 <tr>
                     <td>@urgencia.Id</td>
-                    <td>@urgencia.Nombre</td>
+                    <td>@urgencia.Nombre @urgencia.Ap_paterno @urgencia.Ap_materno</td>
                     <td>@urgencia.Telefono</td>
-                    <td>@urgencia.FechaNac.ToShortDateString()</td>
+                    <td>@urgencia.Fecha_nac.ToShortDateString()</td>
                     <td>@urgencia.Nss</td>
                     <td>
                         <a target="_blank" asp-route-id="@urgencia.Id" asp-controller="Urgencias" asp-action="Editar" type="button" class="btn btn-secondary" aria-label="Editar">
                             <i class="fas fa-eye"></i>
                         </a>
-                        <a type="button" class="btn btn-danger" aria-label="Eliminar">
+                        <a class="btn btn-danger" asp-route-id="@urgencia.Id" asp-controller="Urgencias" asp-action="Eliminar" aria-label="Eliminar">
                             <i class="fas fa-trash"></i>
                         </a>
                     </td>
