--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     <!-- Footer -->
    
 
-    <footer class="page-footer font-small mdb-color pt-4">
+    <footer class="page-footer font-small bg-secondary pt-4">
         <div class="container text-center text-md-left">
 
             <!-- Social buttons -->
