Lista de tareas y cambios

--- a/Views/QuejaSugerencia/AgregarQueja.cshtml
+++ b/Views/QuejaSugerencia/AgregarQueja.cshtml
@@ -3,9 +3,8 @@
 *@
 @{
 }
-
-    <form>
-        <h1>Formulario Quejas</h1>
+    <form class="jumbotron">
+        <h1 class="display-4">Formulario Quejas</h1>
         <br />
         <!-- Cita  -->
         <div class="form-group row">
