--- a/Views/Admin/Urgencias.cshtml
+++ b/Views/Admin/Urgencias.cshtml
@@ -30,7 +30,7 @@
                     <td>@urgencia.Fecha_nac.ToShortDateString()</td>
                     <td>@urgencia.Nss</td>
                     <td>
-                        <a target="_blank" asp-route-id="@urgencia.Id" asp-controller="Urgencias" asp-action="Editar" type="button" class="btn btn-secondary" aria-label="Editar">
+                        <a target="_blank" asp-route-id="@urgencia.Id" asp-controller="Admin" asp-action="VistaEditarUrgencia" type="button" class="btn btn-secondary" aria-label="Editar">
                             <i class="fas fa-eye"></i>
                         </a>
                         <a class="btn btn-danger" asp-route-id="@urgencia.Id" asp-controller="Urgencias" asp-action="Eliminar" aria-label="Eliminar">
