--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Quejas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QuejaSugerencia" asp-action="Menu">Quejas y sugerencias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Urgencias" asp-action="Index">Urgencias</a>
