--- a/Views/QuejaSugerencia/AgregarQueja.cshtml
+++ b/Views/QuejaSugerencia/AgregarQueja.cshtml
@@ -5,65 +5,47 @@
 }
 @model QuejaModel
 <section class="jumbotron">
+    <h1 class="display-4">Formulario Quejas</h1>
     @using (Html.BeginForm("addQueja", "QuejaSugerencia", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-        <h1 class="display-4">Formulario Quejas</h1>
         <div class="form-group row">
-            @*@Html.LabelFor(x=>x.)*@
+            @Html.LabelFor(x => x.Id_queja, new { @class = "col-sm-4 col-form-label" })
+            <div class="col">
+                @Html.TextBoxFor(x => x.Id_queja,
+new { @class = "form-control", placeholder = "N° queja.", type = "number", autofocus = "autofocus" })
+                @Html.ValidationMessageFor(x => x.Id_queja, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.LabelFor(x => x.Email, new { @class = "col-sm-4 col-form-label" })
+            <div class="col">
+                @Html.TextBoxFor(x => x.Email,
+new { @class = "form-control", placeholder = "name@example.com", autofocus = "autofocus" })
+                @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.LabelFor(x => x.Id_tipo_queja, new { @class = "col-sm-4 col-form-label" })
+            <div class="col">
+                @Html.DropDownListFor(x => x.Id_tipo_queja, (IEnumerable<SelectListItem>)ViewBag.tipos, null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Id_tipo_queja, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.LabelFor(x => x.Descripcion, new { @class = "col-sm-4 col-form-label" })
+            <div class="col">
+                @Html.TextAreaFor(x => x.Descripcion, new { @class = "form-control", rows = "5" })
+                @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col">
+                <button type="submit" class="btn btn-success btn-block">Confirmar</button>
+            </div>
+            <div class="col">
+                <button type="reset" class="btn btn-danger btn-block">Cancelar</button>
+            </div>
         </div>
     }
 </section>
-<form class="jumbotron">
-    <h1 class="display-4">Formulario Quejas</h1>
-    <div class="form-group row">
-
-        <div class="col-2">
-            <input type="text" class="form-control" placeholder="N° de Cita">
-        </div>
-    </div>
-    <!-- Cita  -->
-    <div class="form-group row">
-        <label for="inputCita" class="col-sm-2 col-form-label">Cita N°:* </label>
-        <div class="col-2">
-            <input type="text" class="form-control" placeholder="N° de Cita">
-        </div>
-    </div>
-    <!-- E-mail  -->
-    <div class="form-group row">
-        <label for="inputEmail" class="col-sm-2 col-form-label">Correo Electrónico:* </label>
-        <div class="col-sm-6">
-            <input id="correo" name="correo" type="text" alt="correo" class="form-control" placeholder="Ejemplo@gmail.com">
-        </div>
-    </div>
-    <!-- Queja  -->
-    <div class="form-group row">
-        <label for="inputQueja" class="col-sm-2 col-form-label">Tipo de Queja:*</label>
-        <div class="col-sm-3">
-            <select class="form-control">
-                <option selected>-Ninguna-</option>
-                <option value="1">Mal Servicio</option>
-                <option value="2">Error en la informacion</option>
-                <option value="3">Falla del sistema</option>
-            </select>
-        </div>
-    </div>
-    <!-- Reclamacion  -->
-    <div class="form-group row">
-        <label for="inputReclamacion" class="col-sm-2 col-form-label">Descripcion de la reclamacion:* </label>
-        <div class="col-sm-6">
-            <textarea class="form-control" id="descripcion" rows="5" placeholder="Comentarios..."></textarea>
-        </div>
-    </div>
-    <!-- Botones  -->
-    <div class="form-group row">
-        <div class="col-3">
-        </div>
-        <div class="col-2">
-            <button type="button" class="btn btn-success">Confirmar</button>
-        </div>
-        <div class="col">
-            <button type="button" class="btn btn-danger">Cancelar</button>
-        </div>
-    </div>
-</form>
