--- a/Views/QuejaSugerencia/Menu.cshtml
+++ b/Views/QuejaSugerencia/Menu.cshtml
@@ -9,7 +9,7 @@
             <a asp-controller="QuejaSugerencia" asp-action="Queja" class="btn alert-dark btn-lg btn-block">Queja</a>
         </div>
         <div class="col d-flex">
-            <a asp-controller="Home" asp-action="Index" class="btn alert-primary btn-lg btn-block">Sugerencia</a>
+            <a asp-controller="QuejaSugerencia" asp-action="Sugerencia" class="btn alert-primary btn-lg btn-block">Sugerencia</a>
         </div>
     </div>
 </section>
