--- a/Views/Shared/Admin/_Layout.cshtml
+++ b/Views/Shared/Admin/_Layout.cshtml
@@ -19,45 +19,54 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="VistaUrgencias" style="color:black">Urgencias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="VistaSugerencias" style="color:black">Sugerencias</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
         </nav>
     </header>
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
- 
-        <footer class="page-footer font-small bg-secondary pt-4">
-            <div class="container text-center text-md-left">
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
 
-                <!-- Social buttons -->
-                <ul class="list-unstyled list-inline text-center">
-                    <li class="list-inline-item">
-                        <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" aria-label="Facebook" rel="noreferrer">
-                            <i class="fab fa-facebook-square"> </i>
-                        </a>
-                    </li>
+    <footer class="page-footer font-small bg-secondary pt-4">
+        <div class="container text-center text-md-left">
 
-                    <li class="list-inline-item">
-                        <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" aria-label="Instagram" rel="noreferrer">
-                            <i class="fab fa-instagram-square"> </i>
-                        </a>
-                    </li>
-                </ul>
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" aria-label="Facebook" rel="noreferrer">
+                        <i class="fab fa-facebook-square"> </i>
+                    </a>
+                </li>
 
-                <!-- Social buttons -->
-                <!-- Copyright -->
-                <div class="footer-copyright text-center text-white py-3">
-                    © 2020 Copyright:
-                    <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
-                </div>
-                <!-- Copyright -->
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" aria-label="Instagram" rel="noreferrer">
+                        <i class="fab fa-instagram-square"> </i>
+                    </a>
+                </li>
+            </ul>
+
+            <!-- Social buttons -->
+            <!-- Copyright -->
+            <div class="footer-copyright text-center text-white py-3">
+                © 2020 Copyright:
+                <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
             </div>
-        </footer>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @RenderSection("Scripts", required: false)
+            <!-- Copyright -->
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 
 </body>
 </html>
