--- a/Views/Admin/Sugerencias.cshtml
+++ b/Views/Admin/Sugerencias.cshtml
@@ -33,11 +33,8 @@
                         }
                     </td>
                     <td>
-                        <a target="_blank" asp-route-id="@sugerencia.Id" asp-controller="QuejaSugerencia" asp-action="VerSugerencia" type="button" class="btn btn-secondary" aria-label="Ver">
+                        <a target="_blank" asp-route-id="@sugerencia.Id" asp-controller="QuejaSugerencia" asp-action="VerSugerencia" type="button" class="btn btn-info" aria-label="Ver">
                             <i class="fas fa-eye"></i>
-                        </a>
-                        <a class="btn btn-success" asp-route-id="@sugerencia.Id" asp-controller="Admin" asp-action="ValidarSugerencia" aria-label="Validar">
-                            <i class="fas fa-check"></i>
                         </a>
                     </td>
                 </tr>
