--- a/Views/Admin/Urgencias.cshtml
+++ b/Views/Admin/Urgencias.cshtml
@@ -7,15 +7,15 @@
 }
 <a asp-controller="Admin" asp-action="IniciarS">Iniciar</a>
 <a asp-controller="Admin" asp-action="VerSesion">Ver</a>
-<table class="table">
-    <thead>
+<table class="table table-bordered">
+    <thead class="thead-dark">
         <tr>
-            <td>ID</td>
-            <td>Nombre</td>
-            <td>Telefono</td>
-            <td>Fecha consulta</td>
-            <td>NSS</td>
-            <td>Acciones</td>
+            <th scope="col">ID</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Telefono</th>
+            <th scope="col">Fecha consulta</th>
+            <th scope="col">NSS</th>
+            <th scope="col">Acciones</th>
         </tr>
     </thead>
     <tbody>
