--- a/Views/QuejaSugerencia/AgregarQueja.cshtml
+++ b/Views/QuejaSugerencia/AgregarQueja.cshtml
@@ -2,26 +2,31 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    string Errores = ViewBag.errores;
 }
 @model QuejaModel
 <section class="jumbotron">
     <h1 class="display-4">Formulario Quejas</h1>
+    @if (Errores != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @Errores
+        </div>
+    }
     @using (Html.BeginForm("addQueja", "QuejaSugerencia", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
         <div class="form-group row">
-            @Html.LabelFor(x => x.Id_queja, new { @class = "col-sm-4 col-form-label" })
+            @Html.LabelFor(x => x.Id_urgencia, new { @class = "col-sm-4 col-form-label" })
             <div class="col">
-                @Html.TextBoxFor(x => x.Id_queja,
-new { @class = "form-control", placeholder = "N° queja.", type = "number", autofocus = "autofocus" })
-                @Html.ValidationMessageFor(x => x.Id_queja, null, new { @class = "text-danger" })
+                @Html.TextBoxFor(x => x.Id_urgencia, new { @class = "form-control", placeholder = "N° urgencia.", type = "number", autofocus = "autofocus" })
+                @Html.ValidationMessageFor(x => x.Id_urgencia, null, new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group row">
             @Html.LabelFor(x => x.Email, new { @class = "col-sm-4 col-form-label" })
             <div class="col">
-                @Html.TextBoxFor(x => x.Email,
-new { @class = "form-control", placeholder = "name@example.com", autofocus = "autofocus" })
+                @Html.TextBoxFor(x => x.Email, new { @class = "form-control", placeholder = "name@example.com", autofocus = "autofocus" })
                 @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
             </div>
         </div>
