--- a/Views/QuejaSugerencia/VerS.cshtml
+++ b/Views/QuejaSugerencia/VerS.cshtml
@@ -2,7 +2,7 @@
 
 @{
     SugerenciaModel sugerencia = ViewBag.sugerencia;
-    ViewData["Title"] = "VerS";
+    ViewData["Title"] = "Ver Sugerencia";
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     string estado = sugerencia.Estado == 1 ? "Activo" : "Inactivo";
 }
@@ -32,4 +32,5 @@
             <input readonly id="Estado" class="form-control" value="@estado" />
         </div>
     </div>
+    <a class="btn btn-success" asp-route-id="@sugerencia.Id" asp-controller="Admin" asp-action="ValidarSugerencia">Validar Sugerencia</a>
 </section>
