--- a/Views/Shared/Admin/_Layout.cshtml
+++ b/Views/Shared/Admin/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="VistaSugerencias" style="color:black">Sugerencias</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="VistaQuejas" style="color:black">Quejas</a>
+                        </li>
                     </ul>
                 </div>
             </div>
