Se añadieron DataTables

--- a/Views/Admin/Quejas.cshtml
+++ b/Views/Admin/Quejas.cshtml
@@ -2,7 +2,8 @@
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     List<QuejaModel> quejas = ViewBag.quejas;
 }
-<table class="table table-bordered">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+<table class="table table-bordered" id="Quejas">
     <thead class="thead-dark">
         <tr>
             <th scope="col">ID</th>
@@ -46,3 +47,25 @@
         }
     </tbody>
 </table>
+@section scripts{
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#Quejas').DataTable({
+                language: {
+                    "emptyTable": "No hay registros que atender",
+                    "search": "Buscar:",
+                    "info": "Mostrando _START_ a _END_ de _TOTAL_ registros",
+                    "zeroRecords": "Sin resultados encontrados",
+                    "lengthMenu": "Mostrar _MENU_ registros",
+                    "paginate": {
+                        "first": "Primero",
+                        "last": "Ultimo",
+                        "next": "Siguiente",
+                        "previous": "Anterior"
+                    }
+                }
+            });
+        });
+    </script>
+}
