--- a/Views/Admin/Sugerencias.cshtml
+++ b/Views/Admin/Sugerencias.cshtml
@@ -2,7 +2,8 @@
     List<SugerenciaModel> sugerencias = ViewBag.sugerencias;
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
 }
-<table class="table table-bordered">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+<table class="table table-bordered" id="Sugerencias">
     <thead class="thead-dark">
         <tr>
             <th scope="col">ID</th>
@@ -22,10 +23,10 @@
                     <td>
                         @if (sugerencia.Descripcion.Length >= 50)
                         {
-                            @for(int i = 0; i <= 50; i++)
+                            @for (int i = 0; i <= 50; i++)
                             {
                                 @sugerencia.Descripcion[i]
-                            } 
+                            }
                         }
                         else
                         {
@@ -42,3 +43,25 @@
         }
     </tbody>
 </table>
+@section scripts{
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#Sugerencias').DataTable({
+                language: {
+                    "emptyTable": "No hay registros que atender",
+                    "search": "Buscar:",
+                    "info": "Mostrando _START_ a _END_ de _TOTAL_ registros",
+                    "zeroRecords": "Sin resultados encontrados",
+                    "lengthMenu": "Mostrar _MENU_ registros",
+                    "paginate": {
+                        "first": "Primero",
+                        "last": "Ultimo",
+                        "next": "Siguiente",
+                        "previous": "Anterior"
+                    }
+                }
+            });
+        });
+    </script>
+}
