--- a/Views/Urgencias/Editar.cshtml
+++ b/Views/Urgencias/Editar.cshtml
@@ -3,115 +3,129 @@
 *@
 @{
     UrgenciaModel u = ViewBag.urgencia;
-    String fecha = u.Fecha_nac.ToString("yyyy-MM-dd");
+    EmpleadoModel e = ViewBag.empleados;
+    String Fecha = u.Fecha_nac.ToString("yyyy-MM-dd");
     List<AreaModel> areas = ViewBag.areas;
+    List<EmpleadoModel> empleados = ViewBag.empleados;
+
 }
 @model UrgenciaModel
 
-        <section>
-            @using (Html.BeginForm("Update", "Urgencias", FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Id, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBoxFor(u => u.Id,
-                       new { @class = "form-control", placeholder = "Id.",disabled="disabled",value=u.Id, autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(x => x.Id, null, new { @class = "text-danger" })
-                    </div>
+    <section>
+        @using (Html.BeginForm("Editar", "Urgencias", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Id, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBoxFor(u => u.Id,
+                   new { @class = "form-control", placeholder = "Id.", disabled = "disabled", value = u.Id, autofocus = "autofocus" })
+                    @Html.ValidationMessageFor(x => x.Id, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Nombre, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Nombre", u.Nombre, new { @class = "form-control", disabled = "disabled", placeholder = "Nombre.", autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(x => x.Nombre, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Nombre, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Nombre", u.Nombre, new { @class = "form-control", disabled = "disabled", placeholder = "Nombre.", autofocus = "autofocus" })
+                    @Html.ValidationMessageFor(x => x.Nombre, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Ap_paterno, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Ap_paterno", u.Ap_paterno,
-                       new { @class = "form-control", placeholder = "Apellido paterno.", disabled = "disabled", value = u.Ap_paterno, autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(x => x.Ap_paterno, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Ap_paterno, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Ap_paterno", u.Ap_paterno,
+                   new { @class = "form-control", placeholder = "Apellido paterno.", disabled = "disabled", value = u.Ap_paterno, autofocus = "autofocus" })
+                    @Html.ValidationMessageFor(x => x.Ap_paterno, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Ap_materno, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Ap_materno", u.Ap_materno,
-                      new { @class = "form-control", placeholder = "Apellido materno.", disabled = "disabled", value = u.Ap_materno, autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(x => x.Ap_materno, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Ap_materno, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Ap_materno", u.Ap_materno,
+                  new { @class = "form-control", placeholder = "Apellido materno.", disabled = "disabled", value = u.Ap_materno, autofocus = "autofocus" })
+                    @Html.ValidationMessageFor(x => x.Ap_materno, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Telefono, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Telefono",u.Telefono,
-                       new { @class = "form-control", type = "number", disabled = "disabled", placeholder = "0123456789" })
-                        @Html.ValidationMessageFor(x => x.Telefono, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Telefono, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Telefono", u.Telefono,
+                   new { @class = "form-control", type = "number", disabled = "disabled", placeholder = "0123456789" })
+                    @Html.ValidationMessageFor(x => x.Telefono, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.TelefonoF, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("TelefonoF",u.TelefonoF,
-                       new { @class = "form-control", type = "number", disabled = "disabled", value = u.TelefonoF, placeholder = "0123456789" })
-                        @Html.ValidationMessageFor(x => x.TelefonoF, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.TelefonoF, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("TelefonoF", u.TelefonoF,
+                   new { @class = "form-control", type = "number", disabled = "disabled", value = u.TelefonoF, placeholder = "0123456789" })
+                    @Html.ValidationMessageFor(x => x.TelefonoF, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Email, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Email",u.Email,
-                       new { @class = "form-control", type = "text", disabled = "disabled", value = u.Email, placeholder = "name@example.com" })
-                        @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Email, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Email", u.Email,
+                   new { @class = "form-control", type = "text", disabled = "disabled", value = u.Email, placeholder = "name@example.com" })
+                    @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => fecha, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Fecha_nac",fecha,
-                       new { @class = "form-control", type = "date", placeholder = "Fecha de nacimiento." })
-                        @Html.ValidationMessageFor(x => x.Fecha_nac, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => Fecha, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Fecha_nac", Fecha,
+                   new { @class = "form-control", type = "date", placeholder = "Fecha de nacimiento." })
+                    @Html.ValidationMessageFor(x => x.Fecha_nac, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.Nss, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextBox("Nss",u.Nss,
-                       new { @class = "form-control", type = "number", disabled = "disabled", value = u.Nss, placeholder = "123456789" })
-                        @Html.ValidationMessageFor(x => x.Nss, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.Nss, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextBox("Nss", u.Nss,
+                   new { @class = "form-control", type = "number", disabled = "disabled", value = u.Nss, placeholder = "123456789" })
+                    @Html.ValidationMessageFor(x => x.Nss, null, new { @class = "text-danger" })
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(u => u.IdArea, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        <select id="IdArea" name="IdArea" class="form-control" required>
-                            @foreach (AreaModel area in areas)
-                            {
-                                <option selected=@u.IdArea value="@area.Id">@area.Nombre</option>
-                            }
-                        </select>
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(u => u.IdArea, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    <select id="IdArea" name="IdArea" class="form-control" required>
+                        @foreach (AreaModel area in areas)
+                        {
+                            <option selected=@u.IdArea value="@area.Id">@area.Nombre</option>
+                        }
+                    </select>
                 </div>
-                <div class="form-group row">
-                    @Html.LabelFor(x => x.Descripcion, new { @class = "col-sm-4 col-form-label" })
-                    <div class="col">
-                        @Html.TextArea("Descripcion",u.Descripcion,
-                       new { @class = "form-control", placeholder = "Descripcion-" })
-                        @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(e =>e.Id, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    <select id="IdArea" name="IdArea" class="form-control" required>
+                        @foreach (EmpleadoModel empleado in empleados)
+                        {
+                            <option value="@empleado.Id">@empleado.Nombre</option>
+                        }
+                    </select>
                 </div>
-                <div class="row justify-content-md-center">
-                    <div class="col col-2">
-                        <button class="btn btn-primary btn-lg">Enviar.</button>
-                    </div>
-                    <div class="col col-2">
-                        <input class="btn btn-danger btn-lg" type="reset" value="Cancelar">.
-                    </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(x => x.Descripcion, new { @class = "col-sm-4 col-form-label" })
+                <div class="col">
+                    @Html.TextArea("Descripcion", u.Descripcion,
+                   new { @class = "form-control", disabled = "disabled", placeholder = "Descripcion-" })
+                    @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
                 </div>
-            }
-        </section>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col col-2">
+                    <button class="btn btn-primary btn-lg">Enviar.</button>
+                </div>
+                <div class="col col-2">
+                    <input class="btn btn-danger btn-lg" type="reset" value="Cancelar">.
+                </div>
+            </div>
+        }
+    </section>
 @*
     <section>
         @using (Html.BeginForm("Update", "Urgencias", FormMethod.Post))
